testsuite/tests/typecheck/should_fail/UnliftedNewtypesInfinite.stderr

UnliftedNewtypesInfinite.hs:9:15: error:
    • Occurs check: cannot construct the infinite kind:
        t0 ~ 'GHC.Types.TupleRep '[ 'GHC.Types.IntRep, t0]
    • In the definition of data constructor ‘FooC’
      In the newtype declaration for ‘Foo’
